--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 DATABASE_HOST = "localhost"
 DATABASE_PORT = "5432"
-DATABASE_USER = "postgres"
-DATABASE_PASSWORD = "123"
 DATABASE_USER_ADMIN = "postgres"
 DATABASE_PASSWORD_ADMIN = "123"
-DATABASE_NAME = "petShop"
+DATABASE_NAME = "petshop"
